--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         <h1>EBAC Validation</h1>
         <h2>Validador</h2>
         <div id="form-validation">
-            <input id="numero-1" placeholder="Digite o primeiro valor"/>
-            <input id="numero-2" placeholder="Digite o segundo valor"/>
+            <input type="number" id="numero-1" placeholder="Digite o primeiro valor"/>
+            <input type="number" id="numero-2" placeholder="Digite o segundo valor"/>
             <button id="btn" type="submit">Validar</button>
             <div class="valid" id="valid">
             </div>
