--- a/index.html
+++ b/index.html
@@ -1,28 +1,33 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Valida número</title>
     <link rel="stylesheet" href="./main.css">
-</head> 
+</head>
+
 <body>
     <div class="container">
         <h1>EBAC Validation</h1>
         <h2>Validador</h2>
-        <div id="form-validation">
-            <input type="number" id="numero-1" placeholder="Digite o primeiro valor"/>
-            <input type="number" id="numero-2" placeholder="Digite o segundo valor"/>
-            <button id="btn" type="submit">Validar</button>
-            <div class="valid" id="valid">
+        <form id="form">
+            <div id="form-validation">
+                <input type="number" id="numero-1" placeholder="Digite o primeiro valor" />
+                <input type="number" id="numero-2" placeholder="Digite o segundo valor" />
+                <button id="btn" type="submit">Validar</button>
+                <div class="valid" id="valid">
+                </div>
+                <div class="invalid" id="invalid">
+                </div>
+                <div class="same" id="same">
+                </div>
             </div>
-            <div class="invalid" id="invalid">
-            </div>
-            <div class="same" id="same">
-            </div>
-        </div>
+        </form>
     </div>
     <script src="./script.js"></script>
 </body>
+
 </html>
